--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
+:root {
+  --light-blue: rgb(232, 228, 247);
+  --dark-blue: rgb(0, 0, 128);
+}
+
 body{
-  background-color: rgb(232, 228, 247);
+  background-color: var(--light-blue);
   text-align:center;
-  margin-top:120px;
+  margin-top:100px;
 }
 
 body, button, textarea{
@@ -9,17 +14,16 @@ body, button, textarea{
 }
 
 h1, h2, th{
-  color: rgb(0, 0, 128);
+  color: var(--dark-blue);
 }
 
 button{
-  margin-top: 35px;
+  margin-top: 30px;
   font-weight:700;
 }
 
 table{
   margin:auto;
-  margin-top:70px;
   border-spacing: 5px;
 }
 
